--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                                                 <a href="#">Home</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="contact.html">About Us</a>
+                                                <a href="about-us.html">About Us</a>
                                             </li>
                                            
                                             <li class="menu-item menu-item-has-children">
@@ -215,22 +215,25 @@
                                                 <i class="fa fa-chevron-down pq-submenu-icon"></i>
                                                 <ul class="sub-menu">
                                                     <li class="menu-item">
-                                                        <a href="fabric-printing.html">Fabric Printing</a>
+                                                        <a href="fashion-design.html">Fashion Design</a>
                                                     </li>
                                                     <li class="menu-item">
-                                                        <a href="fabric-dyeing.html">Fabric Dyeing</a>
+                                                        <a href="sample-design.html">Sample Design</a>
                                                     </li>
                                                     <li class="menu-item">
-                                                        <a href="manufacture.html">Manufacture</a>
+                                                        <a href="raw-material-sourcing.html">Raw Material Sourcing</a>
                                                     </li>
                                                     <li class="menu-item">
-                                                        <a href="engineering.html">Engineering</a>
+                                                        <a href="in-house-production-facility.html">In-House Production Facility</a>
                                                     </li>
                                                     <li class="menu-item">
-                                                        <a href="stich-fabric.html">Stich Fabric</a>
+                                                        <a href="in-house-laundry.html">In-House Laundry</a>
                                                     </li>
                                                     <li class="menu-item">
-                                                        <a href="we-design-fabric.html">We Design Fabric</a>
+                                                        <a href="in-house-finishing-&-packing.html">In-House Finishing & Packing</a>
+                                                    </li>
+                                                    <li class="menu-item">
+                                                        <a href="in-house-laboratory.html">In-House Laboratory</a>
                                                     </li>
                                                 </ul>
                                             </li>
@@ -1134,7 +1137,7 @@
     <!-- Testimonial -->
 
     <!-- Contact -->
-    <section class="contact pq-bg-img-9 wow animated fadeInUp">
+    <!-- <section class="contact pq-bg-img-9 wow animated fadeInUp">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -1180,7 +1183,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Contact -->
 
     <!-- Footer -->
